result/namespaces/err_3.xml.err
./test/namespaces/err_3.xml:1: error: Failed to parse QName ':foo'
<:foo/>
     ^
